<resources>
    <string name="app_name">Udacity Portfolio App</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spotify_text">SPOTIFY STREAMER</string>
    <string name="btn_scores_text">SCORES APP</string>
    <string name="btn_library_text">LIBRARY APP</string>
    <string name="btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz_reader">XYZ READER</string>
    <string name="btn_my_own_app">CAPSTONE:MY OWN APP</string>
</resources>
