<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_spotify_app"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/orange"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_spotify_text" />

        <Button
            android:id="@+id/btn_scores_app"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_spotify_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/orange"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_scores_text" />

        <Button
            android:id="@+id/btn_library_app"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_scores_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/orange"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_library_text" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_library_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/orange"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_build_it_bigger" />

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_build_it_bigger"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/orange"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_xyz_reader" />

        <Button
            android:id="@+id/btn_my_app"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_xyz_reader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:onClick="openApp"
            android:padding="5dp"
            android:text="@string/btn_my_own_app"
            android:textColor="@color/white" />
    </RelativeLayout>


</ScrollView>
